feat: add PubMed annotation support
